--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -23,13 +23,14 @@
     <!-- partial:../static/partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
-        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg" alt="logo"/></a>
+        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
+          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg"
+              alt="logo" /></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
-        </div>  
+        </div>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <ul class="navbar-nav mr-lg-4 w-100">
@@ -40,15 +41,16 @@
                   <i class="mdi mdi-magnify"></i>
                 </span>
               </div>
-              <input type="text" class="form-control" placeholder="Search now" aria-label="search" aria-describedby="search">
+              <input type="text" class="form-control" placeholder="Search now" aria-label="search"
+                aria-describedby="search">
             </div>
           </li>
         </ul>
         <ul class="navbar-nav navbar-nav-right">
-          
+
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-              <img src="../static/images/faces/face5.jpg" alt="profile"/>
+              <img src="../static/images/faces/face5.jpg" alt="profile" />
               <span class="nav-profile-name">Thapar</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -63,7 +65,8 @@
             </div>
           </li>
         </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
+          data-toggle="offcanvas">
           <span class="mdi mdi-menu"></span>
         </button>
       </div>
@@ -79,7 +82,7 @@
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="/searchengine">
               <i class="mdi mdi-view-headline menu-icon"></i>
@@ -92,7 +95,7 @@
               <span class="menu-title">Upload</span>
             </a>
           </li>
-         
+
           <li class="nav-item">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
@@ -102,61 +105,64 @@
         </ul>
       </nav>
       <!-- partial -->
-      <div class="main-panel">        
+      <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
-            
+
             <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Inline forms</h4>
+                  <h4 class="card-title">Input Requirements</h4>
                   <p class="card-description">
                     <!-- Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row -->
                   </p>
-                  
+
                   <form class="form-inline" method="post" action="{{ url_for('found') }}">
-                  
-                    <label class="sr-only" for="inlineFormInputName2">IEEE or Arxiv</label>
-                    <input type="text" name="engine" class="form-control"  enctype="multipart/form-data" placeholder="IEEE or Arxiv">    
-                        <!-- </div> -->
-                        <!-- <input type="text" class="form-control" aria-label="Text input with dropdown button"> -->
-                      <!-- </div> -->
-                      
-                    <label class="sr-only" for="inlineFormInputName2">Topic</label>
-                    <input type="text" name="keyword" class="form-control"  enctype="multipart/form-data" placeholder="Topic">
+
+                    <label class="sr-only" for="inlineFormInputGroupUsername2">IEEE or Arxiv</label>
+                    <div class="input-group mb-2 mr-sm-2">
+                      <input type="text" name="engine" class="form-control" enctype="multipart/form-data"
+                        placeholder="IEEE or Arxiv">
+                    </div>
+
+                    <label class="sr-only" for="inlineFormInputGroupUsername2">Topic</label>
+                    <div class="input-group mb-2 mr-sm-2">
+                      <input type="text" name="keyword" class="form-control" enctype="multipart/form-data"
+                        placeholder="Topic">
+                    </div>
 
                     <label class="sr-only" for="inlineFormInputGroupUsername2">Results</label>
                     <div class="input-group mb-2 mr-sm-2">
-                      <!-- <div class="input-group-prepend">
-                        <div class="input-group-text">@</div>
-                      </div> -->
-                      <input type="text" name="number" class="form-control"  enctype="multipart/form-data" placeholder="No of Results">
+                      <input type="text" name="number" class="form-control" enctype="multipart/form-data"
+                        placeholder="No of Results">
                     </div>
-                    <!-- <div class="form-check mx-sm-2">
-                      <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" checked>
-                        Remember me
-                      </label>
-                    </div> -->
+
                     <button type="submit" class="btn btn-primary mb-2">Submit</button>
                   </form>
+
                 </div>
               </div>
             </div>
-            <div class="card">
-                    <h3> List of documents found : </h3> <br><br>
-
-                    {% for table in tables %}
-                    {{ table|safe }}
-                    {% endfor %}
+            <div class="col-lg-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Result Table</h4>
+                  <p class="card-description">
+                  </p>
+                  {% for table in tables %}
+                  {{ table|safe }}
+                  {% endfor %}
                 </div>
+              </div>
             </div>
+          </div>
         </div>
         <!-- content-wrapper ends -->
         <!-- partial:../static/partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a
+                href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
             <!-- <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span> -->
           </div>
         </footer>
