--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% if current_user.is_authenticated %}
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -52,7 +52,7 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile" />
-              <span class="nav-profile-name">Thapar</span>
+              <span class="nav-profile-name">{{current_user.username}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
               <a class="dropdown-item">
@@ -188,5 +188,7 @@
   <script src="../static/js/file-upload.js"></script>
   <!-- End custom js for this page-->
 </body>
-
+{% else %}
+<h1>404!</h1>
+{% endif %}
 </html>
