--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% if current_user.is_authenticated %}
 
 <head>
   <!-- Required meta tags -->
@@ -49,18 +50,13 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile"/>
-              <span class="nav-profile-name">{{ username }}</span>
+              <span class="nav-profile-name">{{ current_user.username }}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <!-- <a class="dropdown-item">
-              
-                <i class="mdi mdi-settings text-primary"></i>
-                Profile
-              </a> -->
               <a class="dropdown-item">
                 <i class="mdi mdi-logout text-primary"></i>
-                <form action="{{ url_for('logout') }}" method="post">
-                Logout
+                <form action="/logout">
+                  Logout
                 </form>
               </a>
             </div>
@@ -99,7 +95,7 @@
           </li>
           
           <li class="nav-item">
-          <form action="{{ url_for('logout') }}">
+          <form action="/logout">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
               <span class="menu-title">Logout</span>
@@ -387,6 +383,8 @@
   <script src="../static/js/dataTables.bootstrap4.js"></script>
   <!-- End custom js for this page-->
 </body>
-
+{% else %}
+<h1>404!</h1>
+{% endif %}
 </html>
 
