--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                     {{ form.hidden_tag() }}
                     {{ wtf.form_field(form.username) }}
                     {{ wtf.form_field(form.password) }}
-                    {{ wtf.form_field(form.remember) }}
+                     <!-- wtf.form_field(form.remember)  -->
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
                   </form>
                   <div class="text-center mt-4 font-weight-light">
