--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -144,15 +144,22 @@
               </div>
             </div>
             
-            <div class="col-lg-6 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Doughnut chart</h4>
-                  <canvas id="doughnutChart"></canvas>
+            <div class="main">
+            <div class="container-fluid">
+
+                <!-- <br><br> -->
+                <!-- cloud! -->
+                <div class="head-text">
+                    <h2>Word Cloud</h2>
                 </div>
-              </div>
+                <br>
+                <div class="card">
+                <img src={{ url }} alt="Chart" height="500" width="550">
+                </div>    
+                <!-- <br><br> -->
+
             </div>
-          </div>
+        </div>
          
         </div>
         <!-- content-wrapper ends -->
